# folkbot

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  folkbot.toml.example
docs/: agent-playbook.md
docs/architecture/: 01-process-topology.md  02-turn-lifecycle.md  03-data-schema.md  04-module-deps.md  05-context-pyramid.md  06-trust-boundaries.md  07-tool-system.md  08-multimodal.md  README.md
src/: agent.rs  background.rs  config.rs  main.rs  media.rs  slash.rs  tokens.rs  util.rs  watcher.rs
src/channels/: mod.rs
src/channels/telegram/: addressing.rs  inbound.rs  mod.rs  outbound.rs  streaming.rs
src/cli/: bootstrap.rs  chat.rs  facts.rs  history.rs  mod.rs  prompt.rs  serve.rs  soul.rs  summaries.rs  user.rs
src/llm/: audio.rs  mod.rs  openai.rs
src/mcp/: mod.rs
src/storage/: conversations.rs  db.rs  facts.rs  messages.rs  mod.rs  soul.rs  summaries.rs  users.rs
src/tool/: mod.rs
src/tool/builtin/: cross_user_transcript.rs  fact_forget.rs  fact_remember.rs  identify_user.rs  mod.rs  rate_limit.rs  send_file.rs  send_message.rs  soul_patch.rs
